2016/06/02: IGAS v84
    1. Fix drop down list not show.

2016/05/24: IGAS v83
    1. Use macro for spell action buttons, to avoid no use actions.
    2. Fix stance check.

2016/05/23: IGAS v82
    1. Recode the System.Widget.Unit.SmoothValue to provide more smooth effect.

2016/04/06: IGAS v80
    1. Fix CodeEditor's render for hex numbers.

2016/03/08: IGAS v79
    1. Fix ActionButton's vertex color for usable.
    2. Fix Mount ActionButton's activation.

2016/03/04: IGAS v78
    1. Spell Action button now support Draenor zone ability.

2016/03/03: IGAS v77
    1. Fix Task.NoCombatCall not works well.
    2. Fix Add/remove pet during combat would cause more unit frame to be shown.

2016/03/01: IGAS v76
    1. Fix List Each error.
    2. Fix raid panel's unit frame won't be hidden if the unit not existed.

2016/02/28: IGAS v75
    1. Use IList instead of IFIterator.

2016/02/28: IGAS v74
    1. Fix the Form's auto hide.

2016/02/27: IGAS v73
    1. Update for new PLoop Core.
    2. Fix spell range check for non-existed spell
    3. Imporve the auto-complete for codeeditor.

2015/09/04: IGAS v72
    1. Update for new PLoop Core.
    2. Update features for MultiLineTextBox.

2015/03/12: IGAS v71
    1. BagHandler is added to support bag slot buttons.
    2. Update toc.

2014/12/13: IGAS v70
    1. Fix Task System empty task warning.

2014/11/16: IGAS v69
    1. Trap Launcher spell now works like stance spell.

2014/10/30: IGAS v68
    1. Fix action button can't use hunter traps when Trap Launcher actived.

2014/10/20: IGAS v67
    1. Using GUID to mark the Timer, make sure older call would be stoped.

2014/10/20: IGAS v66
    1. Remove the queue system from the Timer, it's too complex and the error can't be fixed, using the Task.DelayCall for the Timer.

2014/10/20: IGAS v65
    1. Fix a synatx error cause lua error when pick up item.

2014/10/20: IGAS v64
    1. Fix the flyout aciton not work well when reload.

2014/10/19: IGAS v63